--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "react.bhekani.com",
   "version": "0.1.0",
   "private": true,
+  "homepage" : "http://bhekanik.github.io/react.bhekani.com",
   "dependencies": {
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
@@ -12,7 +13,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --watchAll",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "yarn build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": "react-app"
