--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "react.bhekani.com",
   "version": "0.1.0",
   "private": true,
-  "homepage" : "http://bhekanik.github.io/react.bhekani.com",
+  "homepage": "http://bhekanik.github.io/react.bhekani.com",
   "dependencies": {
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
@@ -25,5 +25,8 @@
     "not dead",
     "not ie <= 11",
     "not op_mini all"
-  ]
+  ],
+  "devDependencies": {
+    "gh-pages": "^2.0.1"
+  }
 }
